# pose-graph-optimization

./: .gitignore  CMakeLists.txt  README.md
sample/: drifted_circle.g2o
script/: create_sample.py  plot_results.py
src/: CMakeLists.txt
src/se2/: CMakeLists.txt  error_function.h  normalize_angle.h  optimize.cc  problem.h  read_g2o.h  types.h
